[tool.poetry]
name = "app"
version = "0.0.0"
description = ""
authors = ["Not A. Package <not@package.local>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
celery = "5.5.3"
redis = "^4"
fastapi = "0.109.2"
uvicorn = {version = ">=0.24.0.post1,<0.25", extras = ["standard"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
