[tool.poetry]
name = "tasks"
version = "0.0.0"
description = ""
authors = ["Not A. Package <not@package.local>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
prefeitura-rio = { git = "https://github.com/prefeitura-rio/prefeitura-rio.git", rev = "e1fb218837d3231e07be90d71a07ec1c9d9593f5", branch = "feat/reimplement-templates", extras = [
    "pipelines",
    "pipelines-templates",
] }
celery = "5.5.3"
redis = "^4"
infisical = "1.5.0"
loguru = ">=0.7.0,<0.8"
google-cloud-bigquery = ">=3.26.0,<4"
passlib = {version = ">=1.7.4,<2", extras = ["bcrypt"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
